--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -5,8 +5,8 @@
     tools:context=".MainActivity">
 
     <item
-        android:id="@+id/refresh"
+        android:id="@+id/search"
         android:orderInCategory="100"
-        android:title="Refresh"
+        android:title="Search"
         app:showAsAction="always"/>
 </menu>
