--- a/app/src/main/res/layout/news_articles.xml
+++ b/app/src/main/res/layout/news_articles.xml
@@ -21,5 +21,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent" />
+
 
 </LinearLayout>
